[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Objects/ShopDoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Objects/shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/ShopUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shop/shop.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206.469, 268.405 )

[node name="Shop" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.10352e-05, 26.8701 )
shape = SubResource( 1 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 0.343078, 0.715424 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="ShopDoor" parent="." instance=ExtResource( 1 )]
position = Vector2( 0.144592, 293.159 )
scale = Vector2( 0.5, 0.5 )

[node name="InteractionArea" parent="ShopDoor" index="2"]
z_index = 15
z_as_relative = false

[node name="ShopUI" parent="." instance=ExtResource( 3 )]
margin_left = -10.5646
margin_right = 1909.44
margin_bottom = 1077.5
[connection signal="door_knocked" from="ShopDoor" to="." method="_on_ShopDoor_door_knocked"]
[connection signal="door_knocked" from="ShopDoor" to="." method="_on_ShopDoor_door_knocked2"]
[connection signal="bought" from="ShopUI" to="." method="_on_ShopUI_bought"]
[connection signal="exit" from="ShopUI" to="." method="_on_ShopUI_exit"]

[editable path="ShopDoor"]
